Integrated and Fixed lending modules

--- a/solidity/package.json
+++ b/solidity/package.json
@@ -15,9 +15,9 @@
     "deploy:spoke:mumbai": "npx hardhat deploy-spoke --network mumbai",
     "register-spokes": "npx hardhat register-spokes --network fuji",
     "tenderly:verify:hub": ". ./.env && npx hardhat tenderly:verify Hub=$AVAX_TESTNET_HUB_ADDRESS --network fuji",
-    "tenderly:verify:spoke:op-goerli": ". ./.env && npx hardhat tenderly:verify Spoke=$OP_GOERLI_SPOKE_ADDRESS --network op-goerli",
-    "tenderly:verify:spoke:goerli": ". ./.env && npx hardhat tenderly:verify Spoke=$GOERLI_SPOKE_ADDRESS --network goerli",
-    "tenderly:verify:spoke:mumbai": ". ./.env && npx hardhat tenderly:verify Spoke=$MUMBAI_SPOKE_ADDRESS --network mumbai",
+    "tenderly:verify:spoke:op-goerli": ". ./.env && npx hardhat tenderly:verify SpokeController=$OP_GOERLI_SPOKE_ADDRESS --network op-goerli",
+    "tenderly:verify:spoke:goerli": ". ./.env && npx hardhat tenderly:verify SpokeController=$GOERLI_SPOKE_ADDRESS --network goerli",
+    "tenderly:verify:spoke:mumbai": ". ./.env && npx hardhat tenderly:verify SpokeController=$MUMBAI_SPOKE_ADDRESS --network mumbai",
     "testnet-deploy-townsq": "npx hardhat compile && yarn deploy:hub && yarn deploy:spoke:op-goerli && yarn deploy:spoke:goerli && yarn deploy:spoke:mumbai && yarn register-spokes",
     "testnet-tenderly-verify": "yarn tenderly:verify:hub && yarn tenderly:verify:spoke:op-goerli && yarn tenderly:verify:spoke:goerli && yarn tenderly:verify:spoke:mumbai",
     "testnet-upgrade-hub": "npx hardhat upgrade-hub --network fuji",
